= Amalgalite Changelog
== Version 0.9.0 - 2009-04-05

=== Enhancements

* Update to SQLite 3.6.12
* Added support for the SQLite Backup API, see Database#replicate_to
* Added exclusive/immediate/deferred transaction helpers

== Version 0.8.0 - 2009-03-23

=== Enhancements

* Add in support for obtaining limited schema information on temporary tables
  and indexes
* Add support for returning the primary key columns of a table
* Other miscellaneous items to support the ActiveRecord adapter

== Version 0.7.7 - 2009-03-03

=== Bug Fixes

* roll back to SQLite 3.6.10 because of substr() bug in 3.6.11

== Version 0.7.6 - 2009-03-02

=== Enhancements

* Update to SQLite 3.6.11

=== Bug Fixes

* fix issues with the wrong error message appearing in statement closing
* incorrectly raise an exception if a transaction is started when rescuing an
  exception [reported by James Edwared Gray II]

== Version 0.7.5 - 2009-02-12

=== Bug Fixes

* another ruby -w pass to clear up warnings
* force all tests to run with -w turned on

== Version 0.7.4 - 2009-02-08

=== Bug Fixes

* fix Database#first_row_from not behaving the same as Database#execute() when
  there are no results. [reported by James Edward Gray II]

== Version 0.7.3 - 2009-02-08

=== Enhancements

* added Database#first_row_from
* added Database#first_value_from

=== Bug Fixes

* clean up ruby warnings when run with -w
* fix documenation on Database#execute

== Version 0.7.2 - 2009-01-24
=== Enhancements

* added quoting and escaping of text support, used for database drivers
* added ability to access columns of the schame in original definition order

== Version 0.7.1 - 2009-01-18

=== Enhancements

* added support for sqlite's nexted transactions which appeared in sqlite
* update to SQLite version 3.6.10
* added ability to set the SQLite temporary directory
* added amalgalite-pack --require-order

=== Bug Fixes

* fix exception when accessing the special 'rowid' column