@@ -20,10 +20,11 @@ Amalgalite::GEM_SPEC = Gem::Specification.new do |spec|
   spec.executables  = pkg.files.bin.collect { |b| File.basename(b) }
 
   # add dependencies here
-  # spec.add_dependency("rake", ">= 0.8.1")
-  spec.add_dependency("configuration", ">= 0.0.5")
-  spec.add_dependency("arrayfields", ">= 4.7.0")
+  spec.add_dependency("arrayfields", "~> 4.7.0")
   
+  spec.add_development_dependency("rake", "~> 0.8.4")
+  spec.add_development_dependency("configuration", "~> 0.0.5")
+  spec.add_development_dependency("rspec", "~> 1.2.2")
 
   if ext_conf = Configuration.for_if_exist?("extension") then
     spec.extensions <<  ext_conf.configs
