@@ -83,7 +83,7 @@ Configuration.for('rdoc') {
   files       Configuration.for('packaging').files.rdoc
   main_page   files.first
   title       Configuration.for('project').name
-  options     %w[ --line-numbers --inline-source -T darkfish ]
+  options     %w[ --line-numbers ]
   output_dir  "doc"
 }
 
